--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,3 +55,32 @@ services:
           devices:
             - capabilities: [gpu]
     restart: unless-stopped
+
+  vllm-service:
+    build:
+      context: ./vllm-service
+    image: vllm/vllm-openai:latest
+    runtime: nvidia
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+    ports:
+      - "1370:1370"
+    container_name: container_vllm
+    volumes:
+      - ./vllm/logs:/var/log
+      - /root/.cache/huggingface/hub:/root/.cache/huggingface/hub
+    shm_size: 8gb
+    environment:
+      - NCCL_DEBUG=INFO
+    command: [
+      "--model", "Qwen/Qwen2.5-1.5B-Instruct",
+      "--port", "1370",
+      "--tensor-parallel-size", "1",
+      "--gpu_memory_utilization", "0.95",
+      "--max-model-len", "4096",
+    ]
