--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - ./backend/logs:/var/log
       - /var/run/docker.sock:/var/run/docker.sock
       - /root/.cache/huggingface/hub:/root/.cache/huggingface/hub
+      - /models:/models
     depends_on:
       - redis
     deploy:
@@ -49,6 +50,7 @@ services:
       - ./frontend:/usr/src/app
       - ./frontend/logs:/var/log
       - /root/.cache/huggingface/hub:/root/.cache/huggingface/hub
+      - /models:/models
     deploy:
       resources:
         reservations:
@@ -74,6 +76,7 @@ services:
     volumes:
       - ./vllm/logs:/var/log
       - /root/.cache/huggingface/hub:/root/.cache/huggingface/hub
+      - /models:/models
     shm_size: 8gb
     environment:
       - NCCL_DEBUG=INFO
