--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,7 +78,7 @@ services:
     environment:
       - NCCL_DEBUG=INFO
     command: [
-      "--model", "facebook/opt-125m",
+      "--model", "Qwen/Qwen2.5-1.5B-Instruct",
       "--port", "1370",
       "--tensor-parallel-size", "1",
       "--gpu_memory_utilization", "0.95",
