--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,86 +1,37 @@
+version: '3.8'
+
 services:
-  redis:
-    image: redis:latest
-    container_name: container_redis
-    ports:
-      - "6379:6379"
-    environment:
-      - CONTAINER_PORT=6379
-      - HOST_PORT=6379
-    restart: unless-stopped
-  
   backend:
     build:
       context: ./backend
     ports:
-      - "7861:7861"
-    container_name: container_backend
+      - "8000:8000"
     environment:
-      - CONTAINER_PORT=7861
-      - NCCL_DEBUG=INFO
-      - NVCC_THREADS=2
-    volumes:      
-      - ./backend:/usr/src/app
-      - ./backend/logs:/var/log
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /models:/models
-    depends_on:
-      - redis
+      - NVIDIA_VISIBLE_DEVICES=all
     deploy:
       resources:
         reservations:
           devices:
             - capabilities: [gpu]
-    restart: unless-stopped
 
   frontend:
     build:
       context: ./frontend
     ports:
       - "7860:7860"
-    container_name: container_frontend
     depends_on:
       - backend
+
+  vllm-service:
+    image: vllm/vllm-openai:latest
+    runtime: nvidia
     environment:
-      - GRADIO_SERVER_NAME=0.0.0.0
-      - CONTAINER_PORT=7860
-      - HOST_PORT=7860
-    volumes:
-      - ./frontend:/usr/src/app
-      - ./frontend/logs:/var/log
-      - /models:/models
+      - NVIDIA_VISIBLE_DEVICES=all
     deploy:
       resources:
         reservations:
           devices:
             - capabilities: [gpu]
-    restart: unless-stopped
-
-  vllm-service:
-    build:
-      context: ./vllm-service
-    image: vllm/vllm-openai:latest
-    runtime: nvidia
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
     ports:
-      - "1370:1370"
-    container_name: vllm_bla
-    volumes:
-      - ./vllm/logs:/var/log
-      - /models:/models
+      - "1370-1380:1370-1380"
     shm_size: 4gb
-    environment:
-      - NCCL_DEBUG=INFO
-    command: [
-      "--model", "Qwen/Qwen2.5-1.5B-Instruct",
-      "--port", "1370",
-      "--tensor-parallel-size", "2",
-      "--gpu_memory_utilization", "0.95",
-      "--max-model-len", "4096",
-    ]
