--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build:
@@ -8,6 +6,11 @@ services:
       - "8000:8000"
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
+    volumes:
+      - ./backend:/usr/src/app
+      - ./backend/logs:/var/log
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /models:/models
     deploy:
       resources:
         reservations:
@@ -27,6 +30,8 @@ services:
     runtime: nvidia
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
+    volumes:
+      - /models:/models
     deploy:
       resources:
         reservations:
